=head1 NAME

Changes - Perl Xmms change file

=head1 CREDITS

Thanks to:

the xmms team for an outstanding mp3 player.

Brian Moseley <ix@maz.org> for lots of help squashing bugs
and feature suggestions.

John Sachs <sax@cp.net> for lots of help squashing bugs and
feature suggestions.

Cutter Brown <cutter@cp.net> for help squashing bugs.

=head1 CHANGES

=over 3

=item 0.11 - March 20, 2002

workaround bug in xmms_remote_playist() that caused hang with xmms 1.2.7

fix bug in all_win_toggle which causes prefs win to popup with xmms 1.2.4
thanks to cutter brown for the spot

remove Audio::CD cddb support now that xmms has native cddb support

Xmms::Cmd::quit now uses $remote->quit rather than kill $sig, $pid

new Xmms::Remote methods: quit, is_{main,pl,eq}_win, is_{repeat,toggle}
                          {get,set}_eq_{band,preamp}
                          {get,set}_eq

=item 0.10 - May 16, 2000

fix bug where `+' in any command triggered an eval, now anchored to
beginning of line

Xmms::ExtUtils now uses xmms-config instead of gtk-config

plug memory leak in Xmms::Remote->get_* functions that return gchar *
[Oleg Smirnov <smirnov@nfra.nl>]

fix bug in shell where running external commands left zombies

added Xmms::waitfor_audio() function

added 'list size ...'

fix linkage for XFree86 [Paul Schinder <schinder@pobox.com>]

=item 0.09 - January 31, 1999

`track' now accepts a range

$file is now set to $remote->get_playlist_file when running +perl code

Xmms::urldb() and $ENV{HOME}/.xmms/.perlurldb for url completion

Xmms::is_cpl() function for external Xmms::shell plugins (Audio::RaveMP)

=item 0.08 - December 27, 1999

xmms-playlist-delete.pat updated for xmms-0.9.5.1

Xmms::shell configuration is now written to it's own
~/.xmms/config.perl file to prevent loss of config changes made by
xmms itself

$variables set by `export' or `+ <perl code>' will be interpolated in
cmd strings

added `alias' and `export' functions

added key bindings to toggle xmms windows
